web/packamal/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: package-analysis
  labels:
    name: package-analysis
    environment: production
