web/packamal/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: package-analysis-api-service
  namespace: package-analysis
  labels:
    app: package-analysis-api
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: package-analysis-api
  sessionAffinity: None
